--- a/0214_알고리즘.md
+++ b/0214_알고리즘.md
@@ -1,6 +1,8 @@
 
 
+# BFS
 
+한 곳에서 갈 수 있는 경로를 모두 찾고, 후에 순서대로 방문해서, 갈 수 있는 경로를 모두 찾는 것을 반복
 
 
 
@@ -2018,7 +2020,7 @@ def promising(cr,cc):
 
 #### (1) 트리 이용
 
-+ 하나의 집합을 하나의 트리로 표현
++ **하나의 집합을 하나의 트리로 표현**
 
 + 대표자
 
@@ -2032,9 +2034,9 @@ def promising(cr,cc):
 
 #### (2) 트리 표현/연산
 
-+ 자식노드를 INDEX로 하는 배열로 트리표현
++ 자식노드를 INDEX, 값을 부모노드로 하는 배열로 트리표현
 
-  + 대표자가 몇 개인지 세면 몇 개 트리인지 알 수 있음
+  + 대표자(root)가 몇 개인지 세면 몇 개 트리인지 알 수 있음
 
 + 연산 3가지
 
@@ -2050,7 +2052,7 @@ def promising(cr,cc):
   | ------------------------------------------------------------ | -------- | ---- | ---- | ---- | ---- | ---- | ---- |
   | make_set(1)~(6)                                              | p        | 1    | 2    | 3    | 4    | 5    | 6    |
   | union(1,3)                                                   | p        | 1    | 2    | 1    | 4    | 5    | 6    |
-  | union(2,3) <br />3의 대표원소 y 찾아가서,<br /> y의 대표원소를 2의 대표원소 x로 | p        | 2    | 2    | 1    | 4    | 5    | 6    |
+  | union(2,3) <br />3의 대표원소 y 찾아가서,<br /> y의 대표원소를 2의 대표원소 x로 교체 | p        | 2    | 2    | 1    | 4    | 5    | 6    |
   | union(5,6)                                                   | p        | 2    | 2    | 1    | 4    | 5    | 5    |
   | findset(6)                                                   | 5 return |      |      |      |      |      |      |
 
@@ -2171,8 +2173,8 @@ def promising(cr,cc):
   #-----------------------prim1 미완성 key 이용------------------
   def prim1(r, V):
       MST = [0]*(V+1) # MST 포함여부
-      key = [10000]*(V+1)
-      key[r] = 0     # 시작 정점의 key값
+      key = [10000]*(V+1) #  key : 가중치 
+      key[r] = 0     # 시작 정점의 key값 
       for _ in range(V):
           u = 0
           minV = 100000
@@ -2181,26 +2183,30 @@ def promising(cr,cc):
               if MST[i] == 0 and key[i] <minV:
                   u = i
                   minV = key[i]
+          MST[u] = 1
+          for v in range(V+1):
+              if MST[v] == 0 and adjM[u][v] >0 : # 새로 추가된 노드 u에서 MST에 포함안된 연결노드들 KEY값에 반영
+                  key[v] = min(key[v], adjM[u][v]) # key 값을 update
   
                   
   #--------------이걸로 이해하기-----------------------------------------
   def prim2(r, V):
       MST = [0]*(V+1) # MST 포함여부
-      MST[r] = 1    # 시작 노드 r
-      s = 0         # MST 가중치 합
+      MST[start] = 1    # 시작 노드 start
+      weight_sum = 0         # MST 가중치 합
       for _ in range(V):
-          u = 0  # 내가 선택할 정점 번호를 초기화
+          min_idx = 0  # 내가 선택할 정점 번호를 초기화
           minV = 100000
           for i in range(1,V+1):
               if MST[i] == 1: # 현재 연결된 것들에서 최소 가중치 간선 찾기
                   for j in range(1,V+1):
                       if 0 <adjM[i][j] < minV and MST[j]== 0: # 기존의 것과 연결안되어 있고, 최소비용간선이면 update
-                          u = j
+                          min_idx = j
                           minV = adjM[i][j]
-          s += minV
-          MST[u] = 1
+          weight_sum += minV
+          MST[min_idx] = 1
   ```
-
+  
   
 
 
@@ -2287,11 +2293,7 @@ def promising(cr,cc):
 
 
 
-
-
-
-
-
++ 
 
 
 
@@ -2332,3 +2334,18 @@ def promising(cr,cc):
   + **요약하면**
     + stack이 arr로 구현되어 있을 때, pop,push 연산하면, arr 을 크기 맞춰서 새로 만든 후 기존의 arr을 복사해야함 -> 시간 오래걸림
     + 따라서 stack의 maximum 크기를 알고 있다면, 그 크기만큼 arr 선언해둔 후, top 이라는 idx를 이용해 왔다갔다하며 idx 접근을 하도록 구현하는 것이 더 빠름
+
+
+
+
+
+### [2] global 변수
+
++ 함수내에서 변수 이용시 언제 global 을 이용해야 하는가?
+  + 함수내에서 global 변수에 assign(=)이 발생하고, 값이 바뀌는 경우에 사용해야 함
++ 예:
+  + 힙에서 마지막 위치를 가리키는 last 변수는 global 변수로 이용해야 함
+  + 순열의 수 구할 때, used = [배열] 의 경우, used는 주소를 참조하는 것이기 때문에, 배열이 바뀌어도, used  가 가지고 있는 값은 안바뀌어서, global로 안써도 됨
+
++ LEGB 순으로 변수명 탐색하는데, 함수 내에서는 바깥 Scope의 변수에 접근 가능하나 수정은 불가
+  +  그 이유는 함수는, 그것 자체로 실행되고 끝나는 것이고, 밖의 것을 건들지 않는 것이 원칙이기 때문
