--- a/0214_알고리즘.md
+++ b/0214_알고리즘.md
@@ -933,9 +933,9 @@ def comb(selected, idx, cnt):
 
 
 
-# 분할정복/백트래킹
+# 분할정복/백트래킹 
 
-## 1. 분할정복
+## 1. 분할정복[옮기기 완료]
 
 + Top-down approach
 + 분할 -> 정복 -> 통합
@@ -1195,7 +1195,7 @@ def partition(L, left, right):
 
 ```
 
-###### (d)-2 : Hoare partition
+###### (d)-2 : Lomuto partition
 
 + 우측 끝 값을 pivot으로 사용한 경우
 
@@ -1214,8 +1214,8 @@ def partition(L,left,right)
         # 즉 *에서의 상태는 i의 바로 오른쪽에는 pivot보다 큰 것이 n개 연속있음 -**
         # 즉 이와 같음 : |작|작|작=i|큰|큰|작=j|큰|큰|pivot| -**
         
-        L[i+1], L[j] = L[j], L[i+1]
-        return i + 1
+    L[i+1], L[right] = L[right], L[i+1]
+    return i + 1
     
               
     
@@ -1295,7 +1295,7 @@ def bs(L, low, high, goal_num):
 
 
 
-## 2. 백트래킹
+## 2. 백트래킹 [옮기기 완료]
 
 + 교재에서는 DFS 도중 유망한지 점검해서, 유망하지 않으면 가지치기 함
 
