--- a/0314_DB.md
+++ b/0314_DB.md
@@ -274,3 +274,55 @@ $ sqlite3 SQL/tutorial.sqlite3
 
 + roiwd
 
+
+
+
+
+
+
+
+
+# 4. ORM & SQL
+
+## [1] 몰랐던 것
+
++ ORM with Python (0414 practice)
+
+  ```python
+  #비율 표시를 위해서 총개수, True개수, False 개수가 필요
+  #역참조를 통해 각각 조회
+  question = get_object_or_404(Question,pk=question_pk)
+  total_count = question.comment_set.count()
+  count_a = question.comment_set.filter(pick=0).count()
+  count_b = question.comment_set.filter(pick=1).count()
+  
+  
+  # annotate() 를 이용해서 조회
+  
+  #annoate : QuerySet 각 객체별 주석을 다는것과 같음...주석은 평균, 합계, 등이 될 수 있음
+  # 아래는 주석을 달기 위한 기준선언, 우리는 객체별 총 댓글개수, TRUE 선택 개수, False 선택개수가 필요함
+  # Count 클래스 참고 이외에도 AVG, MAX, MIN 등의 통계를 작성할 수 있음 Django_aggregation.md 문서 참조
+  # https://docs.djangoproject.com/en/4.0/topics/db/aggregation/#cheat-sheet
+  total_count = Count('comment')
+  count_a = Count('comment', filter=Q(comment__pick=0))
+  count_b = Count('comment', filter=Q(comment__pick=1))
+  # 객체별로 주석을 달아서 결과를 반환받음
+  result = Question.objects.annotate(
+                          total_count=total_count,
+                          count_a=count_a,
+                          count_b=count_b
+                      )
+  # 결과 안에서 우리가 URI로 받은 question_pk와 같은 question 객체를 얻어옴 : 댓글개수 와 종류별 댓글 개수를 포함
+  
+  #get_object_or_404() 메서드는 첫 번째 인자로 (클래스|매니저|QuerySet) 을 받는다.
+  
+  # 53번 줄의 결과는 QuerySet 이므로 첫번째 인자로 들어갈 수 있다. 결과내 재검색.
+  question = get_object_or_404(result, pk=question_pk)
+  comments = question.comment_set.order_by('-pk') # 내림차순정렬
+  
+  #각 선택별 비율 계산
+  a_per = round(question.count_a / question.total_count * 100, 2) if question.total_count else 0
+  b_per = round(question.count_b / question.total_count * 100, 2) if question.total_count else 0
+  ```
+
+  
