--- a/0413_db2.md
+++ b/0413_db2.md
@@ -1,3 +1,5 @@
+[toc]
+
 # Custom
 
 ## [1] Custom 하는 법
@@ -432,6 +434,12 @@ def comment_create(request, pk):
     
     
 
+### (2) Custom User 이용시
+
++ `AUTH_USER_MODEL = 'accounts.User'` 추가
+
+
+
 ## [3] article_id = pk
 
 + articles/views.py 의 `comment_create`함수에서
@@ -655,7 +663,9 @@ def detail(request, pk):
 ## [10] next
 
 + `@login_reqired` 만나면 기존 가려던 경로를 next에 저장
-+  
++ 다음과 같이 코드로 next로 갈 수 있게 해줌
+  + `      return redirect(request.GET.get('next') or 'articles:index')`
+
 
 
 
@@ -736,6 +746,103 @@ def detail(request, pk):
   ```
 
   
+
+
+
+## [15] import 하는 것들
+
+```python
+# views.py
+from django.shortcuts import render, redirect
+from django.contrib.auth import login as auth_login
+from django.contrib.auth import logout as auth_logout
+from django.views.decorators.http import require_http_methods, require_POST, require_safe
+from django.contrib.auth.decorators import login_required
+from django.contrib.auth.forms import AuthenticationForm, UserCreationForm, PasswordChangeForm #UserChangeForm
+from .forms import CustomUserChangeForm
+from django.contrib.auth import update_session_auth_hash  # 비밀번호 바꿀 때 이용
+
+
+# models.py
+from django.db import models
+from django.conf import settings
+settings.AUTH_USER_MODEL로 user 표기
+
+from django.contrib.auth.models import AbstractUser
+class User(AbstractUser):
+    pass
+
+
+
+
+# forms.py
+from django.contrib.auth.forms import UserChangeForm, UserCreationForm
+from django.contrib.auth import get_user_model  # 이를 호출하면, 현재 project에서 사용하는 user class를 return해줌
+
+class CustomUserChangeForm(UserChangeForm):
+    class Meta:
+        model  = get_user_model()
+        fields = ('email','first_name','last_name')
+
+class CustomUserCreationForm(UserCreationForm):
+    
+    class Meta:
+        model  = get_user_model()
+        fields = UserCreationForm.Meta.fields + ('email',)
+
+
+```
+
+
+
+
+
+## [16] 자주 까먹거나 헷갈리는 것
+
++ signup (user creation)
+
+  ```python
+  # 회원가입 : CREATE
+  def signup(request):
+      if request.method == 'POST':
+          #요청에서 데이터 받아와서
+          #모델만들어서 DB 저장...
+          form = CustomUserCreationForm(request.POST)
+          if form.is_valid():
+              user = form.save()                  # 해당부분!!!!!
+              auth_login(request,user)
+              return redirect('articles:index')
+      else:
+          #회원가입 화면 보여주기
+          form = CustomUserCreationForm()
+      context = {
+          'form' : form
+      }
+      return render(request,'accounts/signup.html',context)
+  ```
+
+  
+
++ index
+
+  ```python
+  def index(request):
+      articles = Article.objects.order_by('-pk')
+  ```
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
