--- a/0425_JS .md
+++ b/0425_JS .md
@@ -397,7 +397,7 @@ console.log(bar)     // 7
 
 # 연산자
 
-## [1] `=`, `==`, `===`
+## [1] `=`, `==`, `===`, `!==`
 
 + `=` 
   + 할당 연산자
@@ -408,6 +408,9 @@ console.log(bar)     // 7
 + `===`
   + 일치비교연산자
   + 자동으로 형변환 하지 않음
++ `!==`
+  + 다른지비교연산자
+
 
 
 
@@ -955,7 +958,9 @@ console.log(str2.trimEnd())
 
 # 객체
 
-+ 
++ JS에서도(파이썬처럼) 객체는 모든 것의 근간
+  + 객체를 업그레이드한 것 중 하나가 배열
+
 
 
 
@@ -964,6 +969,7 @@ console.log(str2.trimEnd())
 + 내부 변수에 접근하려면 this를 써야하고, this는 함수 안에서 써야함.
 
 ```js
+// this가 메서드가 실행되는 주어를 가리키는 것의 의미 예 1
 const me = {
   firstName : 'John',
   lastName : 'Doe',
@@ -975,6 +981,27 @@ const me = {
 }
 console.log(me.fullName)       // 이건 NaN 나옴
 console.log(me.getFullName())  // 정상출력됨
+
+// this가 메서드가 실행되는 주어를 가리키는 것의 의미 예 2
+function getFullName() {
+    return this.firstName + this.lastName
+}
+
+const me = {
+    firstName : 'aa'
+    lastName : 'bb'
+    getFullName : getFullNamem,
+}
+
+const you = {
+    firstName : 'xx'
+    lastName : 'yy'
+    getFullName : getFullNamem,
+}
+
+me.getFullName()  >>> aaxx   // (this 는 me)
+you.getFullName() >>> xxyy   // (this 는 you)
+getFullName()     >>> NaN    // (this 는 window)
 ```
 
 + this 는 이 함수가 실행이 될 당시에, 함수를 포함하는 객체로 `console.log(me.getFullName()) ` 에서 함수가 실행되므로, this가 `me`임
@@ -990,9 +1017,182 @@ console.log(me.getFullName())  // 정상출력됨
 
 
 
++ python 의 self와 비슷한데, python의 경우는 class 정의시 , self가 인자로 명시적으로 넘어옴
+
+  + ```python
+    class Test():
+        def __init__(self,name):
+            self.name = name
+    ```
+
+    
+
+  + this 는 명시적으로 안 넘어오는데 그냥 쓰임
+
+  + ```js
+    const me = {
+        name : 'sy',
+        printName : function () {
+            console.log(this.name)
+        }
+    }
+    me.printName()
+    >>> sy
+    ```
+
+  + 
+
+
+
++ JS의 this는 **실행 문맥(execution context)에 따라 다른 대상**을 가리킴
+
+  + 1. class 내부의 생성자 함수
+       + this는 생성되는 객체 가리킴 (python 의 self)
+
+  + 2. **메서드** (**객체.메서드명()** 으로 호출 가능한 함수) (메서드는 객체가 할 수 있는 행동으로 `.`찍고 실행가능한 함수 )
+       + this는 해당 **메서드가 소속된 객체(메서드의 주어)**를 가리킴
+       + this가 무엇인지 찾기 위해서는 **method로 호출 가능한게 무엇인지 파악하면 됨**
+
+  + 위 두 가지 제외하면 모두 최상위 객체(window)를 가리킴 (이 경우라면 그냥 window 키워드를 쓰면됨)
+
+  + 예
+
+  + ```js
+    // 이는 method가 아님. 왜냐하면 주어.함수() 형태로 못씀. 여기서 this는 window임.
+    // 즉 . 안찍고 실행 되므로, getFullName의 객체는 window
+    function getFullName() {
+        return this.firstName + this.lastName
+    }
+    ```
+
+  + ```js
+    const me = {
+        firstName : 'sy',
+        lastName : 'ji',
+        'getFullName' : getFullName
+    }
+    getFullName()
+    >>> NaN
+    // 함수 getFullName() 자체는 안바뀌지만, this가 바뀜.
+    me.getFullName()
+    >>> 'syji'
+    ```
+
+  + this는 method로 불릴 때의 주어. 그 외에는 window
+
+  + ```js
+    const you = {
+        firstName : 'jh',
+        lastname : 'k',
+        qwer : getFullName
+    }
+    ```
+
+  + 예2 : 화살표함수의 this / .bind(this) 쓰기
+
+  + ```js
+    // 문제점
+    const obj = {
+        e : 2.718,
+        exps : [0,1,2,3]
+        expValue : function() { 
+            this.exps.forEach(function(exp) {        // this는 obj
+                console.log(this.e**exp)             // this는 window
+            })
+        },
+    }
+    
+    // 해결 방법 1 : bind
+    const obj = {
+        e : 2.718,
+        exps : [0,1,2,3]
+        expValue : function() { 
+            this.exps.forEach(function(exp) {        // this는 obj
+                console.log(this.e**exp)             // this는 obj
+            }.bind(this) )                           // 해결책
+        },
+    }
+    
+    // 해결 방법 2 : => function
+    const obj = {
+        e : 2.718,
+        exps : [0,1,2,3]
+        expValue : function() { 
+            this.exps.forEach( (exp) => {            // this는 obj  // 해결책
+                console.log(this.e**exp)             // this는 obj
+            })
+        },
+    }
+
+  + 함수 내부에 this 키워드가 존재할 경우
+    + 화살표 함수와 function 키워드로 선언한 함수가 다르게 동장
+  + 함수 내부에 this 키워드가 존재하지 않을 경우
+    + 완전히 동일하게 동작
+
+
+
 ## [2] ES6 문법 5개
 
++ 속성명 축약
 
++ 메서드명 축약
+
++ 계산된 속성명 사용하기
+
++ **구조 분해 할당** (중복코드 제거)
+
+  + 1. 함수의 매개변수에 구조분해할당
+
+  + 2. import 시 활용
+
+  + 3. (참고) 구조 분해 할당은 배열도 가능  // 배열 경우는 index 순서대로 넣어줌
+
+    ```js
+    const user = {
+        name : 'Ji',
+        age : '22',
+        balance :,100
+    }
+    // 방법 1 : 객체의 속성의 value를 어떤 변수에 넣는 경우에 많음 // 문제는 중복이 생김
+    const name = user.name
+    const age = user.age
+    const balance = user.balance
+    
+    // 방법 2 : 위의 중복 해결-------------------- 구조 분해 할당
+    const { name } = user
+    const { age } = user
+    const { balance } = user
+    
+    // 방법 3 : 더 간략하게도 가능
+    const { name, age, balance } = user
+    
+    //------방법 3 의 활용 1: 함수의 매개변수에 구조분해할당-----------------
+    // 기존
+    function printUser(user) {
+        console.log(user.name, user.age, user.balance)
+    }
+    // 함수의 매개변수에 구조분해할당
+    function printUser({ name, age, balance }) {  // 해당 객체를 분해해서 받았다고 이해
+        console.log(age, balance, name)
+    }
+    
+    //------방법 3 의 활용 2: import 시 -----------------
+    // 추후 활용
+    
+    ```
+
+  + 배열경우 예
+
+    ```js
+    let a, b, rest;
+    [a, b, ...rest] = [10,20,30,40,50]
+    console.log(rest)
+    >>> [30,40,50]
+    ```
+
+    
+
++ 객체 전개 구문
 
 
 
@@ -1058,6 +1258,120 @@ console.log(me.getFullName())  // 정상출력됨
   ```
 
   + 여기선 안해도 됨?
+  + 여기서 key로 `'getFullName'` 으로 적어도 되는 이유
+
+
+
+## [2] key : value 표현방법 3가지
+
++ ```js
+  // 방법1
+  const you = {
+    firstName : 'your',
+    lastName : 'name',
+    getFullName : getFullName,
+  }
+  
+  // 방법2
+  const you = {
+    firstName : 'your',
+    lastName : 'name',
+    'getFullName' : getFullName,
+  }
+  
+  // 방법3  : key : value 값 같은 경우
+  const you = {
+    firstName : 'your',
+    lastName : 'name',
+    getFullName,
+  }
+  ```
+
++ 
+
+
+
+## [3] string type은 immutable
+
++ 따라서 모든 method는 바뀐 것을 return을 함
+
+
+
+
+
+
+
+## [4] 심화 메서드 사용예시
+
++ ```js
+  const badWords = ['바보', '멍청', '메롱',] 
+  badWords.forEach(function(badWord){
+  filteredInput = filteredInput.replaceAll(badWrod, '**')   // string은 immutable 하므로 원본 안바뀜, return이 존재하지 원본 안바꿈
+       })
+       output.innerText = filteredInput
+      }
+  ```
+
++ 
+
+
+
+
+
+
+
+## [5] 그외
+
++ querySelector 사용법
+
+  + ```js
+    // 이렇게 말고
+    const title = document.querySelector('#title').value
+    const content = document.querySelector('#content').value
+    cardsSection.append(createCard(title,content))
+    
+    // 이렇게 해야, title.value 값 바꾸기 용이함
+    const title = document.querySelector('#title')
+    const content = document.querySelector('#content')
+    cardsSection.append(createCard(title.value, content.value)) 
+    ```
+
+  + 
+
++ `setInterval(displayTime, 1000)`
+  + 1000 밀리세컨즈(1초) 마다 displayTime 함수 실행
+
+
+
+
+
+## [6] 서버의 존재 이유
+
++ Data를 저장하기 위해서 필요함
++ 웹페이지는 JS로만도 가능
+  + JS만으로는 새로고침하면 데이터 다 없어짐
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
