--- a/JS - 02.md
+++ b/JS - 02.md
@@ -8,28 +8,54 @@
 
 # DOM 조작
 
+## [1] DOM 관련 객체 상속 구조
+
++ 아래 순으로 부모에서 자식으로 내려감
+
+1. EventTarget
+
+   + Event Lister를 가질 수 있는 객체가 구현하는 DOM 인터페이스
+
+2. Node
+
+   + 여러가지 DOM 타입들이 상속하는 인터페이스
+
+     
+
+   3-1. Element
+
++ Document 안의 모든 객체가 상속하는 가장 범용적인 인터페이스
+
+  
+
+   3-2. Document
+
++ 브라우저가 불러온 웹페이지를 나타냄
 
 
-## [1] 선택
+
+4. HTMLElement
+
+   + 모든 종류의 HTML 요소
+
+   + 부모 element의 속성 상속
+
+
+
+
+
+## [2] 선택
 
 ### (1) querySelector()
 
 + **`document.querySelector(selector)`**
-
-  + 제공한 선택자와 일치하는 element 하나 선택
-
-  + 제공한 CSS selector를 만족하는 첫번째 **element 객체를 반환** (없다면 null)
++ selector에 일치하는 첫번째 **element 객체를 반환** (없다면 null)
 
 
 
 
 + **`document.querySelectorAll(selector)`**
-
-  + 제공한 선택자와 일치하는 여러 element 선택
-
-  + 매칭 할 하나 이상의 셀렉터를 포함하는 유효한 CSS selector를 인자(문자열)로 받음
-
-  + 지정된 selector에 일치하는 **NodeList 반환**
++ selector에 일치하는 **NodeList 반환**
 
 
 
@@ -54,24 +80,30 @@
 
 
 
-
-
 ### (3) HTMLCollection & NodeList
 
 + 둘 다 배열과 같이 각 항목에 접근하기 위한 index 제공
-+ **HTMLCollection**
+
+**HTMLCollection**
+
++ name, id, index 속성으로 각 항목 접근 가능
+
+  
+
+**NodeList**
+
++ index로만 각 항목에 접근 가능
++ `forEach` 메서드 등을 사용 가능
 
 
 
 ### (4) Collection
 
 + **Live Collection**
-  + 문서가 바뀔 때 실시간으로 업데이트 됨
-  + DOM의 변경사항을 실시간으로 collection에 반영
+  + DOM의 변경사항을 실시간으로 collection에 반영(업데이트)
   + 예
     + HTMLCollection, NodeList
-
-
+    + 만약 class = 'a' 인 요소들 가져와서 class='3'으로 바꾸면, 3으로 바꿀 때마다, 가져온 요소들에서 3으로 바꾼 것은 없어짐
 
 
 
@@ -81,9 +113,33 @@
 
 
 
+### (5) 비교
+
++ method
+
+|      | querySelector()                                              | querySelectorAll()                                           | get...                                                       |
+| ---- | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 특성 | id, tag, class <br />모두 가져올 수 있음                     | id, tag, class <br />모두 가져올 수 있음                     | ``getElementById(id)`<br />`getElementByTagName(tag)`<br />`getElementByClassName(class)`<br />는 각각 id, tag, class 만 가져올 수 있음 |
+| 반환 | selector에 일치하는 첫 **element 객체**                      | selector에 일치하는 **NodeList**                             | **단일 element** 반환 : getElementById<br />**HTMLCollection** 반환 : TagName, ClassName |
+| 비고 | `.querySelector('#id', '.class', 'tag')` 로 3가지 경우 다 가능하므로, 이것 이용 | `.querySelectorAll('#id', '.class', 'tag')` 로 3가지 경우 다 가능하므로, 이것 이용 | 이용 x                                                       |
 
 
-## [2] 변경
+
+
+
++ HTMLCollection & NodeList
+
+|           | HTMLCollection                                              | NodeList                                                     |
+| --------- | ----------------------------------------------------------- | ------------------------------------------------------------ |
+| 항목 접근 | name, id, index 속성으로 각 항목 접근 가능<br />메서드 불가 | index로만 각 항목에 접근 가능 <br />`forEach` 메서드 등을 사용 가능 |
+| 특성      | Live Collection                                             | Live Collection                                              |
+| 비고      |                                                             | `querySelectorAll()`의 반환 NodelList 만 static collection   |
+
+
+
+
+
+## [3] 변경
 
 + innerText, innerHTML 중 최신 것만 1개 적용됨
 
@@ -131,16 +187,6 @@
 
 
 
-+ 비교
-
-  |                    | ParentNode.append()          | Node.appendChild()     |
-  | ------------------ | ---------------------------- | ---------------------- |
-  | 추가할 수있는 객체 | Node 객체, DOMString 객체    | Node 객체              |
-  | 반환값             | 없음                         | 추가된 Node 객체 반환  |
-  | 추가 개수          | 여러 Node 객체와 문자열 가능 | 1개의 Node 객체만 가능 |
-
-  
-
 
 
 ### (3) innerText / innerHtml
@@ -152,9 +198,10 @@
 
 
 + **`Element.innerHtml`**
+  
   + 요소에 포함된 HTML 마크업 해석
   + 사용 지양 (XSS 공격에 취약)
-
+  
 + 예
 
   ```js
@@ -169,17 +216,30 @@
 
 
 
+### (4) 비교
+
+|                    | ParentNode.append()          | Node.appendChild()     |
+| ------------------ | ---------------------------- | ---------------------- |
+| 추가할 수있는 객체 | Node 객체, DOMString 객체    | Node 객체              |
+| 반환값             | 없음                         | 추가된 Node 객체 반환  |
+| 추가 개수          | 여러 Node 객체와 문자열 가능 | 1개의 Node 객체만 가능 |
 
 
 
 
-## [3] 삭제
+
+
+
+## [4] 삭제
 
 ### (1) ChildNode.remove()
 
 + **`ChildNode.remove()`**
-  + Node가 속한 트리에서 해당 Node를 제거
+  + Node가 속한 트리에서 해당 Node를 제거 / **반환없음**
+  
   + 일반적인 삭제
+  
+    
 
 
 
@@ -199,42 +259,36 @@
 
       
 
-  + Node는 인자로 들어가는 자식 Node의 부모 Node
-
-  + 
-
-
-
 
 
 ### (3) classList 이용
 
++ `liTag.classList.toggle('red-text')` 
+  +  클릭 할 때마다 상태값을 변경(생성,삭제 번갈아가며 )시키고 싶은 경우
+
++ `liTag.classList.remove('red-text')` : 이건 삭제만
 
 
 
 
 
+## [5] 속성변경
 
-`liTag.classList.toggle('red-text')` : 클릭 할 때마다 상태값을 변경(생성,삭제 번갈아가며 )시키고 싶은 경우
+### (1) setAttribute(name, value)
 
-`liTag.classList.remove('red-text')` : 이건 삭제만
-
-remove()
-
-removeChild()
-
-## [4] 속성
-
-### (1) setAttribute()
-
-+  여러 속성 한 번에 추가 가능
++  여러 속성 한 번에 설정 가능
   + `div1.setAttribute('class','card m-1')` 
-+ 근데, 추가인지, 저걸로만 설정하는 것인지 확인해봐야함
-  + 아마 가장 마지막 setAttribute의 것만 추가되는 듯
+  
+  + 속성 이미 존재시 갱신, 없다면 추가
+  
+  + 위 처럼 적용시 div1의 class는 'card m-1'만 존재하게 됨
+  
+    
 
+### (2) getAttribute(attributeName)
 
-
-### (2) getAttribute()
++ 해당 요소의 얻고자하는 값(attributeName 값) 반환
++ `element.getAttribute('class')` >>> `가지고 있는 class들 목록 string`
 
 
 
@@ -242,13 +296,7 @@ removeChild()
 
 ### (3) classList.add()
 
-
-
-
-
-
-
-+ 
++ class 추가시 이용 권장
 
 ```js
 const locations = document.querySelectorAll('ul li')
@@ -265,7 +313,12 @@ locations[i].classList.add('red-text')
 
 
 
+### (4) 비교
 
+|      | setAttribute()                                               | getAttribute() | classList.add()                | className                   |
+| ---- | ------------------------------------------------------------ | -------------- | ------------------------------ | --------------------------- |
+| 코드 |                                                              |                | `.classList.add('class-name')` | `.clssName += 'class-name'` |
+| 비고 | `.setAttribute('class','a')` 하면<br />해당 element가 가진 모든 class가 a로만 바뀜 (갱신의 역할을 함) |                | **class 추가시 이용**          | **class 추가시 이용**       |
 
 
 
@@ -461,17 +514,146 @@ locations[i].classList.add('red-text')
 
 # 궁금한 것
 
-+ DOMSting 이 무엇?
++ DOMString 이 무엇?
+
+  + DOM에서 사용하는 문자열(element 형태가 아닌 문자열)
+  + https://developer.mozilla.org/en-US/docs/Web/API/DOMString
+
 + element, node 가 무엇?
-+ Change My Color 할 때, 색 설정 후 글자 바꾸면 왜 글자색 안바뀜?
+
+  + html 엘리먼트 : 태그, 종료태그, 속성, 이너텍스트
+  + node를 상속받아서 html element를 만듦
+    + tag랑 속성들 각각도 node
+    + 예를들면 `<form action="" id="form">` 에서
+      + form, action, id 각각 모두 node
+      + 위의 것 다 합친 것이 element
+
+
+
 
 + screenX, screenY
   + 모든 사람의 환경에서 동일?
-  + 해상도나 모니터 크기에 상관없이 동일?
+  + clinentX, clienetY  가 같을 수 있음
+  + 
+  + 
+
++ submit 누르면 action으로 url 이동함. preventDefault로 막아줘야함.
+
+
++ document.body.style.backgroundImage = `url('./images/${imageNo}.jpg')`` 에서 오른쪽 식이 대체 무엇? +  https://www.w3schools.com/html/html_images_background.asp 의 url 과 관계
+
+  + 원래 `<p style="background-image: url('img_girl.jpg');">` 여기서 url이 만족해야하는 type이 무엇인지와  위의 백틱과의 관계?
+
+
+
+
++ 
++ 
++ 
++ 
++ 
++ 
++ 
++ 
++ 
++ 
++ 
++ 
++ 
++ 
++ 
++ 
++ 
++ 
++ 
++ 
++ 
++ 
++ 
++ 
++ Change My Color 할 때, 색 설정 후 글자 바꾸면 왜 글자색 안바뀜?
++ 
++ 
++ 
++ 
++ 
++ 
++ 
++ 
++ 
++ 
++ 
++ 
 + naver logo 가져오기
   + logo_default
   + naver_logo
   + 왜 다 작동 안하나?
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -499,3 +681,17 @@ locations[i].classList.add('red-text')
 
 
 + alert('팝업뜸')
+
+
+
++ a tag의 target
+
+  + ```html
+    <a target='_blank' href='#'>글씨</a>
+    ```
+
+  + `_blank` 있으면 새로운 탭에서 링크실행
+
+
+
++ setInterval(callback, 1000) : 1000이 지날때마다 displayTime 실행
