--- a/HTML_CSS_0203_0207.md
+++ b/HTML_CSS_0203_0207.md
@@ -650,7 +650,7 @@ placeholder
 
 ### [2] Components
 
-#### (1) [Bottons](https://getbootstrap.com/docs/5.1/components/buttons/)
+#### (1) [Buttons](https://getbootstrap.com/docs/5.1/components/buttons/)
 
 + ```btn``` : 버튼을 생성
 + ```btn-primary( secondary, success, danger, warning, info, light, dark, link )``` : 버튼 배경 색
