--- a/git_0415_협업방식.md
+++ b/git_0415_협업방식.md
@@ -1,3 +1,7 @@
+[toc]
+
+
+
 # GIT
 
 
@@ -27,7 +31,39 @@
 
 
 
+# 협력과정
 
++ master와 동기화(pull)
+
++ branch 생성
+
+  + ```bash
+    $ git swtich -c branchname
+    ```
+
++ 작업하기
+
++ 작업끝나면 branch 에 push
+
+  + ```bash
+    $ git add .
+    $ git commit -m "commit name"
+    $ git push origin branchname
+    ```
+
++ 그 후 master branch로 이동
+
+  + ```bash
+    $ git switch master
+    ```
+
++ 원격저장소 master와 동기화
+
+  + ```bash
+    $ git pull origin master
+    ```
+
+    
 
 
 
