--- a/알고리즘_순열조합부분집합.md
+++ b/알고리즘_순열조합부분집합.md
@@ -1,4 +1,435 @@
 [TOC]
 
+
+
 #  순열
+
++ 다수의 알고리즘 문제들은 순서화된 요소들의 집합에서 최선의 방법을 찾는 것과 관련
+
+  + 예 : Traveling Salesman Problem
+
+    
+
+## [1] nPn 
+
+### (1) loop(단순노동)
+
+```python
+# 1.loop로 [1,2,3] 순열
+arr = [1,2,3]
+for l1 in range(1,4):
+    for l2 in range(1,4):
+        if l2 != l1:
+            for l3 in range(1,4):
+                if l3 != l1 and l3!=l2:
+                    print(l1,l2,l3)
+
+```
+
+
+
+### (2) used 이용 & 재귀
+
+```python
+# 2. used 이용 : loop 방식 일반화
+def perm(idx):
+    if idx == n:
+        print(result)
+    else:
+    # 재귀에 의해 for loop 이 처음부터 반복되고, used가 변화하는 상황 이해하면, 아래 코드 이해감.
+        for i in range(n):
+            if used[i] == 0:
+                used[i] = 1
+                result[idx] = arr[i]
+                perm(idx+1)
+                used[i] = 0
+                
+arr = [1,2,3]
+n = len(arr)
+used = [0]*n
+result = [0]*n
+perm(0)
+```
+
+
+
+### (3) 최소한의 교환 (나중에 이해하기)
+
+```python
+# 3. 최소한의 교환 : 원본 배열 이용
+arr = [1,2,3]
+n = len(arr)
+def perm(idx, n):
+    if idx == n:
+        print(arr)
+        return
+    else:
+        for j in range(idx, n):
+            arr[idx], arr[j] = arr[j], arr[idx]
+            perm(idx + 1, n)
+
+arr = [1,2,3]
+n = len(arr)
+perm(0,3)
+```
+
+
+
+
+
+## [2] nPr
+
+### (1) used 이용  & 재귀
+
+```python
+# 1. used 이용 
+def perm(idx):
+    if idx == r:  # nPn과 다른 부분  1/3
+        print(result)
+    else:
+    # 재귀에 의해 for loop 이 처음부터 반복되고, used가 변화하는 상황 이해하면, 아래 코드 이해감.
+        for i in range(n):
+            if used[i] == 0:
+                used[i] = 1
+                result[idx] = arr[i]
+                perm(idx+1)
+                used[i] = 0
+                
+arr = [1,2,3]
+n = len(arr)
+r = 2          # nPn과 다른 부분 2/3
+used = [0]*n
+result = [0]*r # nPn과 다른 부분 3/3
+perm(0)
+```
+
+
+
+
+
+
+
+# 부분집합
+
++ 다수의 중요 알고리즘들이 원소들의 그룹에서 최적의 부분집합을 찾는 것
+  + 예 : 배낭 짐싸기 (knapsack)
+
+
+
+## [1] 전체 부분집합 (합이 몇과 같은 조건 문제)
+
+- 
+
+  
+
+### (1) binary counting
+
++ 부분집합을 생성하기 위한 가장 자연스러운 방법 (원소개수 달라져도 적용가능)
+
++ binary counting은 사전적 순서로 생성하기 위한 가장 간단한 방법
+
++ binary counting
+
+  + 원소 수에 해당하는 n개의 비트열을 이용
+
+  + j번째 비트값이 1이면, j번째 원소가 포함되었음을 의미
+
+    
+
+  + | 10진수 | 이진수 | {A,B,C} |
+    | ------ | ------ | ------- |
+    | 0      | 000    | {}      |
+    | 1      | 001    | {A}     |
+    | 2      | 010    | {B}     |
+    | 3      | 011    | {A,B}   |
+    | 4      | 100    | {C}     |
+    | 5      | 101    | {A,C}   |
+    | 6      | 110    | {B,C}   |
+    | 7      | 111    | {A,B,C} |
+
+
+
+####  비트연산자
+
+- & : and
+
+- | : or
+
+- << : 좌로 shift (1<<5 는 2^5)
+
+- \>> : 우로 shift
+
+- ^ : exclusive or
+
+- 1 << n : 원소가 n 개 일 때 부분집합 개수
+
+- i&(1<<j): i의 j번째 비트가 1인지 아닌지 검사
+
+  
+
+#### 코드
+
+```python
+# 1. [1,2,3]의 부분집합 생성
+arr = [1,2,3]
+n = len(arr)
+results = []        # 결과들 다 list로 저장
+for i in range(1<<n):
+    subset = []
+    for j in range(n):
+        # j번째 자리가 1인지 파악
+        if i & (1<<j):
+            subset.append(arr[j])  
+    results.append(subset)         
+
+```
+
+
+
+### (2) used 이용 & 재귀
+
+```python
+# 2. used & 재귀
+arr = [1,2,3]
+n = len(arr)
+used = [0]*n
+results = []        # 결과 저장됨
+
+def sub(idx):
+    if idx == n:
+        # print(used , end= ' ')
+        subset = []
+        for i in range(n):
+            if used[i] == 1:
+                subset.append(arr[i])
+        results.append(subset)
+        # print(subset)
+    
+    else:   # 여기 잘 기억하기
+        used[idx] = 1
+        sub(idx+1)
+        used[idx] = 0
+        sub(idx+1)
+sub(0)
+```
+
+
+
+
+
+
+
+
+
+## [2] n개 중 r개 원소 부분집합(조합)
+
++ 성질
+
+$$
+_nC_r = _{n-1}C_{r-1} + _{n-1}C_r
+$$
+
+
+
+### (1) binary counting
+
+```python
+# 1. [1,2,3] 의 부분집합 중 원소개수 2개인 것
+arr = [1,2,3]
+n = len(arr)
+r = 2                                 # [1]-(1) 에서 추가된 부분 1/2
+results = []         
+for i in range(1<<n):
+    subset = []       
+    for j in range(n):
+        if i & (1<<j):
+            subset.append(arr[j])      
+    if len(subset)==r:                 # [1]-(1) 에서 추가된 부분 2/2
+        results.append(subset)   
+# 결과확인        
+for subset in results:
+    print(subset)
+```
+
+
+
+### (2) used 이용 & 재귀 1
+
+```python
+arr = [1,2,3,4,5]
+n = len(arr)
+r = 3                          # [1]-(2) 에서 추가된 부분 1/2
+used = [0]*n
+results = []
+
+def sub(idx):
+    if idx == n:
+        if sum(used) == r:      # [1]-(2) 에서 추가된 부분 2/2
+            subset = []
+            for i in range(n):
+                if used[i] == 1:
+                    subset.append(arr[i])
+            results.append(subset)
+            
+    else:
+        used[idx] = 1
+        sub(idx+1)
+        used[idx] = 0
+        sub(idx+1)
+```
+
+
+
++ 이게 아래 (3) used 이용 & 재귀 2 보다 느림 / binary와는 비슷함
+
++ ```python
+  %timeit sub(0)
+  >>> 35.3 µs ± 5.64 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)
+  
+  %timeit nCr(0,0)
+  >>> 24.9 µs ± 1.3 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)
+  ```
+
+  
+
+### (3) used 이용 & 재귀 2 : 인자 2개  : 이게 빠름
+
+```python
+# 3. used 이용
+arr = [1,2,3,4,5]
+n = len(arr)
+r = 3
+used = [0]*n
+results = []
+
+def nCr(idx, cnt): #idx가 arr에서 몇 번재 것까지 봤는지 / cnt가 선택한 것 개수
+    if cnt == r:
+        subset = []
+        for i in range(n):
+            if used[i] == 1:
+                subset.append(arr[i])
+        results.append(subset)
+
+    if idx >= n:
+        return
+
+    used[idx] = 1
+    nCr( idx + 1, cnt + 1)
+    used[idx] = 0
+    nCr(idx + 1, cnt)
+
+
+nCr(0, 0)    
+```
+
+
+
+### (4) 그 외 더 빠르지만(직접선택), 기억하기 복잡한 것들
+
+#### (a) 방법 1
+
+```python
+n = 5
+r = 3
+arr = [i for i in range(1,n+1)]
+comb = [0]*r
+
+def nCr(s,k): # s: 선택구간 시작, k:고른 개수
+    if k == r:
+        print(*comb)
+    else:
+        for i in range(s, n-r+k+1):   # 이부분이 참.
+            comb[k] = arr[i]
+            nCr(i+1,k+1)
+    return
+
+nCr(0,0)
+        
+```
+
+
+
+#### (b) 방법2
+
+```python
+# 2. 기본형
+def nCr(n,r,s): # n개에서 r개를 고르는 조합, s: 선택할 수 있는 구간의 시작
+    if r == 0: # 더 이상 고를 것이 없다
+        print(*comb)
+    else:
+        for i in range(s, n-(r-1)):
+            comb[r-1] = a[i]
+            # comb[3-r] = a[i] 로 하면 사전순으로 나옴
+            nCr(n,r-1,i+1)
+    return
+
+
+n = 5
+r = 3
+# k = r  아래 변형에 이용
+a = [i for i in range(1,n+1)]
+comb = [0]*r
+nCr(n,r,0)
+
+
+# 2. 변형 (사전순출력)
+def nCr(n,r,s,k): # n개에서 r개를 고르는 조합, s: 선택할 수 있는 구간의 시작, k: 전체 선택해야하는 개수
+    if r == 0: # 더 이상 고를 것이 없다
+        print(*comb)
+    else:
+        for i in range(s, n-(r-1)):
+            comb[k-r] = a[i] # 로 하면 사전순으로 나옴
+            nCr(n,r-1,i+1,k)
+    return
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
