--- a/0214_알고리즘.md
+++ b/0214_알고리즘.md
@@ -851,7 +851,7 @@ nCr(n,r,0,0)
 #### (5) 조합 생성방법5
 
 ```python
-arr = [1,2,3,4,5]
+arr = [1, 2, 3, 4, 5]
 n = 5
 r = 3
 
@@ -859,14 +859,17 @@ def comb(selected, idx, cnt):
     if cnt == r:
         print(selected)
         return
-    
-    if idx >=n:
+
+    if idx >= n:
         return
-        
+
     selected[idx] = 1
-    comb(selected, idx+1, cnt+1)
+    comb(selected, idx + 1, cnt + 1)
     selected[idx] = 0
-    comb(selected, idx+1, cnt)
+    comb(selected, idx + 1, cnt)
+
+selected = [0]*n
+comb(selected, 0, 0)
 ```
 
 
