--- a/Dj04_0411_Auth.md
+++ b/Dj04_0411_Auth.md
@@ -1,10 +1,11 @@
+[toc]
+
 + error 정리
   + 200번대
   + 400번대
   + 500번대
   + NoreverseMatch
     + templates에서 url 잘못된 경우
-  
 + [Django 공식 github](https://github.com/django/django) 에서 package들 python으로 작성된 코드 볼 수 있음
   + 예를들어, ` from django.contrib.auth.models import User ` 를 보고 싶다면, 
   + github -> django -> contrib -> auth -> models.py -> class User 를 보면 됨
