--- a/git_0415_협업방식.md
+++ b/git_0415_협업방식.md
@@ -25,13 +25,46 @@
 
 
 
+# fixture
+
+
+
++ db는 원격저장소에 올리지 않음
+  + 우리 데이터의 구조를 다 노출시키기 때문에
 
 
 
 
 
++ 보내는 사람
 
-# 협력과정
+```bash
+$ python manage.py dumpdata --indent 4 articles.article > articles.json
+$ python manage.py dumpdata --indent 4 articles.comment > comments.json
+$ python manage.py dumpdata --indent 4 accounts.user > users.json
+```
+
+
+
++ 받는 사람
+
+```bash
+$ python manage.py loaddata articles.json comments.json users.json
+```
+
++ 위처럼 한번에 load 가능한 이유는 django가 **fixtures/** 까지 보기 때문임.
+
+  + 더 안전하게 하려면 folder 구조를 app/fixtures/app/articles.json 해주면 (templates 와 같은 형식으로)
+
+  ```bash
+  $ python manage.py loaddata articles/articles.json articles/comments.json accounts/users.json
+  ```
+
+  
+
+
+
+# 협력과정1
 
 + master와 동기화(pull)
 
@@ -50,6 +83,8 @@
     $ git commit -m "commit name"
     $ git push origin branchname
     ```
+
++ master 와 branch merge
 
 + 그 후 master branch로 이동
 
@@ -71,7 +106,7 @@
 
 
 
-# Forking Workflow
+# 협력과정 2 : Forking Workflow
 
 + repo의 소유권이 없는 경우로, 오픈소스에 주로 해당
 
