--- a/알고리즘_순열조합부분집합.md
+++ b/알고리즘_순열조합부분집합.md
@@ -296,30 +296,27 @@ def sub(idx):
 
 ```python
 # 3. used 이용
-arr = [1,2,3,4,5]
-n = len(arr)
+arr = [1, 2, 3, 4, 5]
+n = 5
 r = 3
-used = [0]*n
-results = []
+used= [0] *5
 
-def nCr(idx, cnt): #idx가 arr에서 몇 번재 것까지 봤는지 / cnt가 선택한 것 개수
+def comb( idx, cnt):
     if cnt == r:
-        subset = []
-        for i in range(n):
-            if used[i] == 1:
-                subset.append(arr[i])
-        results.append(subset)
+        print(used)
+        return
 
     if idx >= n:
         return
 
     used[idx] = 1
-    nCr( idx + 1, cnt + 1)
+    comb(idx + 1, cnt + 1)
     used[idx] = 0
-    nCr(idx + 1, cnt)
+    comb( idx + 1, cnt)
 
 
-nCr(0, 0)    
+
+comb(0,0)
 ```
 
 
