--- a/vue02_0509.md
+++ b/vue02_0509.md
@@ -155,7 +155,311 @@
 
 
 
+# 4. Router
 
+## [1] 기능
+
+
+
+## [2] 진행 과정
+
+### (1) 설치 및 실행
+
+**설치 및 실행 코드**
+
+
+
+**실행 후**
+
++ main.js에 자동으로 등록 해줌
++ App.vue에 router 사용 코드 넣어줌
+
+
+
+### (2) 수정해야 하는 부분
+
++ App.vue
++ router/index.js
+
+
+
+#### (a) router/index.js
+
+```js
+import Vue from 'vue'
+import VueRouter from 'vue-router'
+import HomeView from '../views/HomeView.vue'
+import AboutView from '../views/AboutView.vue'
+import UserProfile from '../views/UserProfile.vue'
+
+Vue.use(VueRouter)
+
+const routes = [
+  {
+    path: '/',                  // url 패턴
+    name: 'home',               // 별칭 (해당 url 패턴으로 들어오면, 이런 별칭으로 부를 수 있음)
+    component: HomeView         // rendering 할 component
+  },
+  {
+    path: '/about',
+    name: 'about',
+    component: AboutView,
+  },
+  {
+    path: '/user/:userId/:username/:major',
+    name: 'profile',
+    component: UserProfile
+  }
+]
+
+const router = new VueRouter({
+  mode: 'history',
+  base: process.env.BASE_URL,
+  routes
+})
+
+export default router
+```
+
+
+
+#### (b) App.vue
+
+```vue
+<template>
+  <div id="app">
+    <nav>
+      <router-link :to="{ name: 'home' }">Home</router-link>   // a tag 같은 것, 별명으로 넣기
+      #<router-link to="/">Home</router-link> // 이것도 가능 하지만 별명으로 넣기  
+      <router-link :to="{ name: 'about' }">About</router-link>
+    </nav>
+    <p>
+      <router-view/>
+    </p>
+    
+  </div>
+</template>
+```
+
+
+
+
+
+
+
+
+
+### (3) 핵심 개념 1: router-link, router-view
+
+```vue
+// App.vue
+<template>
+  <div id="app">
+    <nav>
+      <router-link :to="{ name: 'home' }">Home</router-link> // a tag 역할, 별명으로 넣기
+ 
+      <router-link :to="{ name: 'about' }">About</router-link>
+    </nav>
+    <p>
+      <router-view/>
+    </p>
+    
+  </div>
+</template>
+
+```
+
+**짧은 설명(기능)**
+
++ `<router-link>` : a tag를 대신함
+
++ `<router-view/>` : `<router-link>`에서 호출된 router/index.js의 component가 들어갈 자리
+
+  + 만약 `home`이 호출되면, 해당자리에 `HomeView` component가 소환
+
+  + 만약 `about`이 호출되면, 해당자리에 `AboutView` component가 소환
+
+    
+
+**긴 설명**
+
++ `<router-link>` 
+  + 사용자 네비게이션을 가능하게 하는 **컴포넌트**로, 목표경로는 `to` 로 지정
+  + HTML5 히스토리 모드에서 router-link는 clinkevent를 차단하여, 브라우저가 페이지를 다시 로드하지 않도록 함
+
++ `<router-view/>`
+  + 주어진 routes에 대해 일치하는 컴포넌트를 렌더링하는 **컴포넌트**
+    + `<router-link>`  클릭시, 해당 경로와 연결되어 있는 index.js에 정의한 컴포넌트 가져옴
+  + 실제 컴포넌트가 DOM에 부착되어 보이는 자리
+
+
+
+
+
+
+
+
+### (4) 그 외 개념
+#### (a) history mode (브라우저 전반 내용)
+
++ 브라우저의 히스토리는 남기지만, 실제 페이지는 이동하지 않는 기능 지원
+
+  + HTML History API를 사용해서 router를 구현한 것
+
+  + 페이지를 다시 로드하지 않고, URL을 탐색할 수 있음
+  + SPA의 단점인 URL이 변경되지 않는 것 해결
+
+
+
+**history API**
+
++ DOM의 window 객체는 history 객체를 통해, 브라우저의 세션 기록에 접근할 수 있는 방법 제공
+
+  
+
+
+#### (b) Named Routes
+
+
++ 이름을 가지는 라우트
+
+  + `:to` 로 바인딩 해서 사용해야 함
+
++ 예시
+
+  ```vue
+  # router/index.js
+  const routes = [
+    {
+      path: '/',                  
+      name: 'home',        // named routes
+      component: HomeView     
+    }
+  ]
+  
+  # App.vue
+  <nav>
+    <router-link :to="{ name: 'home' }">Home</router-link>  // named routes
+  </nav>
+  ```
+
+  
+
+#### (c) 프로그래밍 방식 네비게이션(push)
+
++ `router-link` 를 클릭할 때 뿐 아니라, `button`을 클릭할 때도 router 진행되도록
++ Vue 인스턴스 내부에서 router instance에 `$router` 로 접근 가능
+  + `this.$router.push` 이용
+
++ 코드
+
+  ```vue
+  <template>
+    <div class="about">
+      <h1>This is an about page</h1>
+      <button @click="moveToHome">To Home</button>
+    </div>
+  </template>
+  
+  <script>
+  export default {
+    name: 'AboutView',
+    methods: {
+      moveToHome() {
+        // 1. literal string path
+        this.$router.push('home')
+        
+        // 2. object
+        this.$router.push({ name: 'home' })
+        
+        // 3. named route
+        this.$router.push({ name: 'user', params:{ userId:'123' } })
+        
+        // 4. with query, resulting in /register?plan=private
+        this.$router.push({ path: 'register', query: {plan:'private'} } )
+      }
+    }
+  }
+  </script>
+  ```
+
+  ```js
+  # router/index.js
+  const routes = [
+    {
+      path: '/',                  
+      name: 'home',        // named routes
+      component: HomeView     
+    },
+    { // 3. named route
+      path : '/user/:userId',  // 장고의 <int:user_id> 와 같은 것
+      name : 'User',
+      
+    }
+  ]
+  ```
+
+  
+
+#### (d) dynamic route matching
+
++ 동적인자는 `:` 으로 시작 ( 장고의 `<int:pk>`)
+
++ 컴포넌트에서 `this.$route.params` 로 사용가능
+
++ userProfile.vue 코드
+
+  ```vue
+  userProfile.vue
+  
+  <template>
+    <div>
+      <h1>user profile</h1>
+      <p>
+        당신의 id는 {{ user.userId }}
+        당신의 이름은 {{ user.username }}
+        전공은 {{ user.major }}
+      </p>
+    </div>
+  </template>
+  
+  <script>
+  export default {
+    name: 'UserProfile',
+    data: function () {
+      return {
+        user: this.$route.params,
+      }
+    }
+  }
+  </script>
+  
+  ----------------------------------------------------------------------------------
+  router/index.js
+  const routes = [
+    {
+      path: '/user/:userId/:username/:major',
+      name: 'profile',
+      component: UserProfile
+    }
+  ]
+  ```
+
+  
+
+
+
+
+
+## [3] components vs. views
+
++ App.vue
+  + 최상위 컴포넌트
++ views/
+  + router(index.js)에 매핑되는 컴포넌트 모아두는 폴더
+  + 즉, router에 쓸 화면들에 해당하는 .vue 파일 넣기
++ components/
+  + router에 매핑된 컴포넌트 내부에서 쓰이는 컴포넌트를 모아두는 폴더
 
 
 
