--- a/vue04_0516.md
+++ b/vue04_0516.md
@@ -380,3 +380,113 @@ $ python manage.py migrate
   ```
 
   
+
+## [3] localStrage
+
++ 저장하기
+
+  ```js
+  // LoginView.vue  
+    methods:{
+      login : function(){
+        // axios로 login 요청 보내고,
+        // 로그인 성공하면 응답(키)받아서, 저장하기
+        // 로그인 실패하면 alert 출력해주기
+        console.log(this.username, '', this.password)
+        axios({
+          method: 'post',
+          url: `${SERVER_URL}/api/v1/accounts/login/`,
+          data : this.credentials
+        })
+          .then(response=>{
+            //로그인 성공하면 나한테 뭘 줄거니까..
+            console.log(response.data)
+            localStorage.setItem('basicToken', response.data.key) // 로그인 성공시 basicToken에 key 받아온 거 저장
+            this.$router.push({name:'TodoView'})  // 성공시만 router
+          })
+          .catch(error=>{
+            console.log(error)
+          })
+      }
+    }
+  ```
+
+  
+
+
+
++ 가져오기
+
+  ```javascript
+  // TodoList.vue
+    methods : {
+      getTodos:function(){
+        axios({
+          method:'get',
+          url : `${SERVER_URL}/api/v1/todos/`,
+          headers : {
+            'Authorization' : `Token ${localStorage.getItem('basicToken')}`
+          }
+        })
+          .then(response => {
+            this.todos = response.data
+        })
+      }
+    }
+  ```
+
+
+
+
+
+## [4] SERVER_URL 사용하기
+
++ root에 `.env.local` 생성
+
+  ```
+  .env.local 파일
+  
+  VUE_APP_SERVER_URL=http://127.0.0.1:8000
+  ```
+
++ script 에서 아래처럼 사용
+
+  ```js
+  <script>
+  const SERVER_URL = process.env.VUE_APP_SERVER_URL
+  
+        axios({
+          method: 'post',
+          url: `${SERVER_URL}/api/v1/accounts/login/`,
+          data : this.credentials
+        })
+  </script>
+  ```
+
+  
+
+
+
+## [5] Server DB와 Vue Client Store 차이
+
++ client의 Store
+
+  + 내가 현재 화면 구성하기 위해 잠시 들고 있는 데이터
+
+  + 데이터 가져와서 가지고 놀 때, 안 없어지도록 하는 것
+
+  + local storage에 저장하더라도, 브라우저가 바뀌거나, 브라우저 삭제하면 데이터 사라짐
+
+    
+
++ server의 db
+
+  + 데이터가 영구보관 됨
+  + 어느 브라우저를 이용하더라도, 데이터 가져올 수 있음
+
+
+
++ server db에 데이터 넣기(덤프)
+  + 보통 원본 데이터를 우리 server에 덤프시켜주는 프로그램이 있음
+  + 우리는 안배웠으므로, json 가져와서 fixture로 손 수 넣어줘야 함
+  + 만약 우리 db에 사용자가 원하는 정보 없으면, TMDB가서 원하는 data 가져와서, db에 저장하는 과정 넣을 수 있다면 좋음
