--- a/python/0127_OOP.md
+++ b/python/0127_OOP.md
@@ -365,11 +365,19 @@ print(p3.speceis)      # 인스턴스 변수에서 species를 먼저 찾음
 
 ## 2. 객체지향의 핵심개념
 
++ 인간중심 프로그래밍
+
+  + 세상의 객체 중 프로그래밍에 필요한 부분만 떼어와서, 객체로 만듦
+
+    
+
 ### [1]추상화
 
 + 세부적인 내용은 감추고 필수적인 부분만 표현하는 것 
 
 + 여러 클래스가 공통적으로 사용할 속성 및 method를 추출하여, 기본 클래스로 작성하여 활용
+
++ **어떻게 동작이 아니라, 무엇을 할 수 있는지에 초점을 맞춤**
 
   
 
@@ -399,6 +407,8 @@ print(p3.speceis)      # 인스턴스 변수에서 species를 먼저 찾음
     
 
 ### [4] 캡슐화
+
++ **객체의 일부 구현 내용에 대해, 외부로부터의 직접적인 엑세스 차단 + attributes and methods를 object안에  포함되도록!**
 
 + 객체의 일부 구현 내용에 대해, 외부로부터의 직접적인 엑세스를 차단하는 것
 
@@ -543,6 +553,17 @@ print(p3.speceis)      # 인스턴스 변수에서 species를 먼저 찾음
 
   
   
-  
-  
-  
+
+
+
+
+
+### 추상화 vs. 캡슐화
+
++ [스택오버플로우](https://stackoverflow.com/questions/15176356/difference-between-encapsulation-and-abstraction)
+
++ **캡슐화** 는 외부인이 직접 액세스하는 것을 방지하기 위해 **클래스에서** 자주 변경될 수 있는 변수 또는 일부 구현을 숨깁니다 . getter 및 setter 메서드를 통해 액세스해야 합니다.
+
+  **추상화** 는 무언가를 숨기는 데도 사용되지만 **더 높은 수준(클래스, 인터페이스)** 입니다. 추상 클래스(또는 인터페이스)를 사용하는 클라이언트는 그것이 무엇인지 신경 쓰지 않고 무엇을 할 수 있는지만 알면 됩니다.
+
++ 
